// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeatmapChart should apply correct color intensity based on values 1`] = `
.c0 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 svg g text {
  font-size: 12px;
}

.c3 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c5 {
  display: inline-block;
  white-space: nowrap;
}

.c4 {
  text-align: right;
  word-break: break-word;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  position: static;
  margin-right: 15px;
  margin-bottom: 10px;
}

.c2 {
  display: inline-block;
  -webkit-writing-mode: vertical-rl;
  -ms-writing-mode: tb-rl;
  writing-mode: vertical-rl;
  -webkit-transform: rotate(-180deg);
  -ms-transform: rotate(-180deg);
  transform: rotate(-180deg);
  margin: auto 0;
  white-space: pre-wrap;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      Range
    </div>
    <div
      className="c3"
    >
      <div />
    </div>
  </div>
  <div
    className="c4"
  >
    <span
      className="c5"
    >
      Intensity
    </span>
  </div>
</div>
`;

exports[`HeatmapChart should render no data 1`] = `
<h4
  style={
    Object {
      "marginTop": 20,
      "textAlign": "center",
      "width": "100%",
    }
  }
>
  No data in this time range.
</h4>
`;

exports[`HeatmapChart should render with custom axes labels 1`] = `
.c0 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 svg g text {
  font-size: 12px;
}

.c3 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c5 {
  display: inline-block;
  white-space: nowrap;
}

.c4 {
  text-align: right;
  word-break: break-word;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  position: static;
  margin-right: 15px;
  margin-bottom: 10px;
}

.c2 {
  display: inline-block;
  -webkit-writing-mode: vertical-rl;
  -ms-writing-mode: tb-rl;
  writing-mode: vertical-rl;
  -webkit-transform: rotate(-180deg);
  -ms-transform: rotate(-180deg);
  transform: rotate(-180deg);
  margin: auto 0;
  white-space: pre-wrap;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      THE-Y
    </div>
    <div
      className="c3"
    >
      <div />
    </div>
  </div>
  <div
    className="c4"
  >
    <span
      className="c5"
    >
      THE-X
    </span>
  </div>
</div>
`;

exports[`HeatmapChart should render with data 1`] = `
.c0 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 svg g text {
  font-size: 12px;
}

.c3 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c5 {
  display: inline-block;
  white-space: nowrap;
}

.c4 {
  text-align: right;
  word-break: break-word;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  position: static;
  margin-right: 15px;
  margin-bottom: 10px;
}

.c2 {
  display: inline-block;
  -webkit-writing-mode: vertical-rl;
  -ms-writing-mode: tb-rl;
  writing-mode: vertical-rl;
  -webkit-transform: rotate(-180deg);
  -ms-transform: rotate(-180deg);
  transform: rotate(-180deg);
  margin: auto 0;
  white-space: pre-wrap;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      Categories
    </div>
    <div
      className="c3"
    >
      <div />
    </div>
  </div>
  <div
    className="c4"
  >
    <span
      className="c5"
    >
      Time Periods
    </span>
  </div>
</div>
`;

exports[`HeatmapChart should render with store and model 1`] = `
.c0 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 svg g text {
  font-size: 12px;
}

.c3 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c5 {
  display: inline-block;
  white-space: nowrap;
}

.c4 {
  text-align: right;
  word-break: break-word;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  position: static;
  margin-right: 15px;
  margin-bottom: 10px;
}

.c2 {
  display: inline-block;
  -webkit-writing-mode: vertical-rl;
  -ms-writing-mode: tb-rl;
  writing-mode: vertical-rl;
  -webkit-transform: rotate(-180deg);
  -ms-transform: rotate(-180deg);
  transform: rotate(-180deg);
  margin: auto 0;
  white-space: pre-wrap;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      Y-Axis
    </div>
    <div
      className="c3"
    >
      <div />
    </div>
  </div>
  <div
    className="c4"
  >
    <span
      className="c5"
    >
      X-Axis
    </span>
  </div>
</div>
`;
